--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kranti</title>
-    <link rel="icon" href="images/fist.ico">
+    <link rel="icon" href="images\logo_transparent.png">
     <!-- bootstrap links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -34,7 +34,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="brand-name fa-beat-fade">
                     <i class="fa-classic fa-hand-back-fist hand-fist-beat" style="color: #04365d;"></i>
-                    <a class="navbar-brand site-name" href="">KRANTI</a>
+                    <a class="navbar-brand site-name" href="">AnimeShala</a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
