--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
     </form>
         <div class="platform-selection">
-            <h3 class="choose-platform">Choose Platform:</h3></a>
+            <h2 class="choose-platform">Choose Platform:</h2></a>
             <div class="socials">
                 <div class="row">
                     <div class="col-4 ">
@@ -201,11 +201,10 @@
                         class="fa-brands fa-linkedin" style="color: #2d2d2d;"></i></a>
                 <a class="footer-link" href="https://www.instagram.com/hellouditt/"> <i
                         class="fa-lg stamps fa-brands fa-instagram" style="color: #2d2d2d;"></i></a>
-                <a class="footer-link" href=""><i class="stamps fa-solid fa-envelope fa-lg"
-                        style="color: #2d2d2d;"></i></a>
+                <!-- <a class="footer-link" href=""><i class="stamps fa-solid fa-envelope fa-lg"
+                        style="color: #2d2d2d;"></i></a> -->
             </div>
         </div>
-        <p>&bigstar;&bigstar;&bigstar;</p>
 
     </footer>
 </body>
