--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="footer-contact-links1">
             <h2 class="contact">Contact us</h2>
             <div class="footer-contact-links">
-                <a class="footer-link" href="https://twitter.com/"><i class="stamps fa-brands fa-twitter fa-lg"
+                <a class="footer-link" href="https://twitter.com/hellouditt"><i class="stamps fa-brands fa-twitter fa-lg"
                         style="color: #2d2d2d;"></i></a>
                 <a class="footer-link" href="https://www.linkedin.com/in/udit-sharma-b17058245/"><i
                         class="fa-brands fa-linkedin" style="color: #2d2d2d;"></i></a>
